--- a/LMPTSBase/package.json
+++ b/LMPTSBase/package.json
@@ -26,6 +26,7 @@
     "async": "^3.2.2",
     "chalk": "^5.0.0",
     "express": "^4.17.2",
+    "isolated-vm": "^4.3.6",
     "marked": "^4.0.8",
     "node-7z": "^3.0.0",
     "vm2": "^3.9.5"
