--- a/LMPTSBase/package.json
+++ b/LMPTSBase/package.json
@@ -23,12 +23,14 @@
     "@types/express": "^4.17.13",
     "@types/marked": "^4.0.1",
     "@types/node-7z": "^2.1.4",
+    "@types/readline-sync": "^1.4.4",
     "async": "^3.2.2",
     "chalk": "^5.0.0",
     "express": "^4.17.2",
     "isolated-vm": "^4.3.6",
     "marked": "^4.0.8",
     "node-7z": "^3.0.0",
+    "readline-sync": "^1.4.10",
     "vm2": "^3.9.5"
   }
 }
